--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 body {
   margin: 0;
 }
+
+.mapContainer {
+  width: '100%';
+  height: '100vh';
+  position: 'relative';
+  overflow: 'hidden';
+}
