--- a/src/components/Coordinates.css
+++ b/src/components/Coordinates.css
@@ -1,7 +1,7 @@
 .mapContainer .coordsContainer {
   position: absolute;
   z-index: 1;
-  width: 50%;
+  width: 30%;
   height: 80%;
   overflow: auto;
   overflow-x: hidden;
@@ -12,4 +12,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.coordsContainer::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  /* border: 1px solid black; */
+  background-color: #f5f5f5;
+  border-radius: 5px;
+}
+
+.coordsContainer::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+  height: 6px;
+  border-radius: 5px;
+}
+
+.coordsContainer::-webkit-scrollbar-thumb {
+  background: #aba9a9;
+  border-radius: 7px;
+  height: 5px;
 }
